# banglejs-algos-tester

./: .gitingore  CMakeLists.txt  LICENSE  README.md
data/steps/controlled/: 0.csv  0_1.csv  0_2.csv  0_3.csv
src/: main.c  types.h
src/stepcounters/: stepcounters.c  stepcounters.h
src/stepcounters/dummy-counter/: dummy.c  dummy.h
src/stepcounters/espruino/: espruino.c  espruino.h
src/stepcounters/oxford-step-counter/: StepCountingAlgo.c  StepCountingAlgo.h  config.h  detectionStage.c  detectionStage.h  postProcessingStage.c  postProcessingStage.h  preProcessingStage.c  preProcessingStage.h  ringbuffer.h  scoringStage.c  scoringStage.h
